--- a/EVA4RFUtils.ipynb
+++ b/EVA4RFUtils.ipynb
@@ -6,7 +6,7 @@
       "name": "EVA4RFUtils.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOquGt/pqNruf2v2qoWHBcp",
+      "authorship_tag": "ABX9TyOQuXI7kBJVXqQEkBWMQUfd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,8 @@
       "source": [
         "## Visualizing Receptive Field.\n",
         "#### This notebook is currently used to visualize the receptive field for MNIST dataset. It can be adapted for CIFAR/other datasets. Make sure you use the right channels.\n",
-        "#### Main libraries are used from https://github.com/fornaxai/receptivefield"
+        "#### Main libraries are used from https://github.com/fornaxai/receptivefield\n",
+        "#### Core model taken from EVA4 Session 5....Thanks to Rohan Shravan"
       ]
     },
     {
@@ -117,84 +118,13 @@
       "metadata": {
         "id": "S7u9jxPpJP3h",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "9a7dc93a-a555-4ab0-dae6-b26ee5938519"
+        "colab": {}
       },
       "source": [
         "!pip install git+https://github.com/microsoft/tensorwatch"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting git+https://github.com/microsoft/tensorwatch\n",
-            "  Cloning https://github.com/microsoft/tensorwatch to /tmp/pip-req-build-rlt71_t3\n",
-            "  Running command git clone -q https://github.com/microsoft/tensorwatch /tmp/pip-req-build-rlt71_t3\n",
-            "Requirement already satisfied (use --upgrade to upgrade): tensorwatch==0.9.0 from git+https://github.com/microsoft/tensorwatch in /usr/local/lib/python3.6/dist-packages\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (3.1.3)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (1.17.5)\n",
-            "Requirement already satisfied: pyzmq in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (17.0.0)\n",
-            "Requirement already satisfied: plotly in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (4.4.1)\n",
-            "Requirement already satisfied: ipywidgets in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (7.5.1)\n",
-            "Requirement already satisfied: pydot@ git+https://github.com/sytelus/pydot@v1.5.0#egg=pydot from git+https://github.com/sytelus/pydot@v1.5.0#egg=pydot in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (1.3.0)\n",
-            "Requirement already satisfied: nbformat in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (5.0.4)\n",
-            "Requirement already satisfied: scikit-image in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (0.16.2)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (3.13)\n",
-            "Requirement already satisfied: graphviz in /usr/local/lib/python3.6/dist-packages (from tensorwatch==0.9.0) (0.10.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->tensorwatch==0.9.0) (0.10.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->tensorwatch==0.9.0) (2.4.6)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->tensorwatch==0.9.0) (2.6.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->tensorwatch==0.9.0) (1.1.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from plotly->tensorwatch==0.9.0) (1.12.0)\n",
-            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.6/dist-packages (from plotly->tensorwatch==0.9.0) (1.3.3)\n",
-            "Requirement already satisfied: ipykernel>=4.5.1 in /usr/local/lib/python3.6/dist-packages (from ipywidgets->tensorwatch==0.9.0) (4.6.1)\n",
-            "Requirement already satisfied: widgetsnbextension~=3.5.0 in /usr/local/lib/python3.6/dist-packages (from ipywidgets->tensorwatch==0.9.0) (3.5.1)\n",
-            "Requirement already satisfied: ipython>=4.0.0; python_version >= \"3.3\" in /usr/local/lib/python3.6/dist-packages (from ipywidgets->tensorwatch==0.9.0) (5.5.0)\n",
-            "Requirement already satisfied: traitlets>=4.3.1 in /usr/local/lib/python3.6/dist-packages (from ipywidgets->tensorwatch==0.9.0) (4.3.3)\n",
-            "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.6/dist-packages (from nbformat->tensorwatch==0.9.0) (0.2.0)\n",
-            "Requirement already satisfied: jupyter-core in /usr/local/lib/python3.6/dist-packages (from nbformat->tensorwatch==0.9.0) (4.6.1)\n",
-            "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /usr/local/lib/python3.6/dist-packages (from nbformat->tensorwatch==0.9.0) (2.6.0)\n",
-            "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image->tensorwatch==0.9.0) (1.1.1)\n",
-            "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image->tensorwatch==0.9.0) (2.4.1)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image->tensorwatch==0.9.0) (1.4.1)\n",
-            "Requirement already satisfied: pillow>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image->tensorwatch==0.9.0) (6.2.2)\n",
-            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image->tensorwatch==0.9.0) (2.4)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib->tensorwatch==0.9.0) (45.1.0)\n",
-            "Requirement already satisfied: jupyter-client in /usr/local/lib/python3.6/dist-packages (from ipykernel>=4.5.1->ipywidgets->tensorwatch==0.9.0) (5.3.4)\n",
-            "Requirement already satisfied: tornado>=4.0 in /usr/local/lib/python3.6/dist-packages (from ipykernel>=4.5.1->ipywidgets->tensorwatch==0.9.0) (4.5.3)\n",
-            "Requirement already satisfied: notebook>=4.4.1 in /usr/local/lib/python3.6/dist-packages (from widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (5.2.2)\n",
-            "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /usr/local/lib/python3.6/dist-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (4.8.0)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.6/dist-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (0.7.5)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.6/dist-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (0.8.1)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.6/dist-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (4.4.1)\n",
-            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.6/dist-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (1.0.18)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.6/dist-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (2.1.3)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.6/dist-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (2.11.1)\n",
-            "Requirement already satisfied: terminado>=0.3.3; sys_platform != \"win32\" in /usr/local/lib/python3.6/dist-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (0.8.3)\n",
-            "Requirement already satisfied: nbconvert in /usr/local/lib/python3.6/dist-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (5.6.1)\n",
-            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.6/dist-packages (from pexpect; sys_platform != \"win32\"->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (0.6.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.6/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->tensorwatch==0.9.0) (0.1.8)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (1.1.1)\n",
-            "Requirement already satisfied: testpath in /usr/local/lib/python3.6/dist-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (0.4.4)\n",
-            "Requirement already satisfied: mistune<2,>=0.8.1 in /usr/local/lib/python3.6/dist-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (0.8.4)\n",
-            "Requirement already satisfied: pandocfilters>=1.4.1 in /usr/local/lib/python3.6/dist-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (1.4.2)\n",
-            "Requirement already satisfied: bleach in /usr/local/lib/python3.6/dist-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (3.1.0)\n",
-            "Requirement already satisfied: entrypoints>=0.2.2 in /usr/local/lib/python3.6/dist-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (0.3)\n",
-            "Requirement already satisfied: defusedxml in /usr/local/lib/python3.6/dist-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (0.6.0)\n",
-            "Requirement already satisfied: webencodings in /usr/local/lib/python3.6/dist-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->tensorwatch==0.9.0) (0.5.1)\n",
-            "Building wheels for collected packages: tensorwatch\n",
-            "  Building wheel for tensorwatch (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for tensorwatch: filename=tensorwatch-0.9.0-cp36-none-any.whl size=218743 sha256=8fe4db27b8b3e25f6a46bdeaa1b5842916faf00e1f0ff1a4f78906f2fea595f7\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-n7yd3hni/wheels/0e/6e/65/6d7b4c568f02087ad645f532a625b8c842f6512308f58022e7\n",
-            "Successfully built tensorwatch\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -408,6 +338,7 @@
         "        Define your model as a list of various modules and \n",
         "        call nn.Sequential on the model to create the model during object \n",
         "        instantiation\n",
+        "        Below model is taken from EVA4 Session5....Big thanks to Rohan Shravan\n",
         "    \"\"\"\n",
         "    def _make_layers(self, disable_activations: bool):\n",
         "        activation = lambda: Linear() if disable_activations else nn.ReLU()\n",
